--- a/vite-project/src/components/PokemonList/PokemonList.css
+++ b/vite-project/src/components/PokemonList/PokemonList.css
@@ -3,3 +3,16 @@
     text-align: center;
     margin: 8px;
 }
+.pokemon-wrapper{
+    /* color: aliceblue; */
+    /* background-color: black; */
+    /* border: 2px solid red; */
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+}
+.controls button{
+    margin: 3px;
+    padding: 1rem;
+    height: 40px;
+    width: 114px;
+}
